<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.scottlindley.farmgroceryapp.SignUpActivity.SignUpActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardCornerRadius="16dp"
        android:backgroundTint="@color/colorAccent">
        <TextView
            android:id="@+id/button_text"
            android:text="sign up"
            android:textSize="18sp"
            android:layout_margin="16dp"
            android:textColor="#eee"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        </android.support.v7.widget.CardView>
    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/sign_up_button"
        android:layout_marginBottom="46dp"
        android:textSize="36sp"
        android:text="Ready to start shopping?\nSign up to begin!"
        android:gravity="center"/>
    <EditText
        android:id="@+id/user_state_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:hint="State of Residence"
        android:visibility="invisible"
        android:layout_above="@id/sign_up_button"/>
    <EditText
        android:id="@+id/user_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:hint="Name"
        android:layout_above="@id/user_state_edit"
        android:layout_margin="16dp"/>
</RelativeLayout>
