<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp"
        android:layout_margin="8dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ImageView
            android:id="@+id/farm_photo"
            android:layout_width="match_parent"
            android:layout_height="83.5dp"
            android:src="@color/colorAccent"
            android:layout_marginBottom="4dp"/>
        <TextView
            android:id="@+id/farm_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/farm_photo"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:textSize="12sp"/>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>